helm/pgadmin-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: pgadmin-dev.192.168.230.72.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-pgadmin
                port:
                  number: 10024
